feat: add ticket module
